Spacing fixes

--- a/app/javascript/flavours/aether/styles/accounts.scss
+++ b/app/javascript/flavours/aether/styles/accounts.scss
@@ -1248,6 +1248,10 @@ img.parallax[src*='/headers/original/missing.png'] {
 }
 
 .account-timeline__right-column {
+  @media screen and (max-width: $no-gap-breakpoint) {
+    margin-bottom: 20px;
+  }
+
   h4 {
     border-bottom: 1px solid var(--ui-highlight-color);
     padding: 10px 0;
